HelloUltraviolet/Fixtures/RejectedSource/Expressions/PtrNullExpectedRequirement/Expected.uv
//! Expected diagnostic metadata for the PtrNullExpectedRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-1530", "def.16.PtrNullExpected")
